--- a/ros2-bridge/Dockerfile.ros2_bridge.gui
+++ b/ros2-bridge/Dockerfile.ros2_bridge.gui
@@ -43,8 +43,6 @@ RUN export ROS_DISTRO=galactic && \
 
 RUN apt install -y python3-rosdep python3-colcon-common-extensions ros-galactic-gazebo-ros-pkgs
 
-RUN rosdep init && rosdep update
-
 RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' && \
 curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add - && \
 apt update
@@ -52,16 +50,24 @@ apt update
 #install ros noetic
 RUN apt install -y ros-noetic-desktop-full
 
-RUN apt install -y python-rosdep python-rosinstall python-rosinstall-generator python-wstool build-essential
+RUN apt install -y python3-rosdep python3-rosinstall python3-rosinstall-generator python3-wstool build-essential
 
-USER developer
+RUN rosdep init && rosdep update
+
 ENV HOME /home/developer
 
-RUN mkdir -p ${HOME}/ros1_bridge/src && \
-git clone -b galactic https://github.com/ros2/ros1_bridge.git && \
-cd ${HOME}/ros1_bridge && \
-source /opt/ros/noetic/setup.basrh && \
-source /opt/ros/galactic/setup.bash && \
-colcon build --symlink-install --packages-select ros1_bridge --cmake-force-configure && \
-source install/setup.bash
+WORKDIR /home/developer
 
+# RUN mkdir -p ${HOME}/ros1_bridge/src && \
+# git clone -b galactic https://github.com/ros2/ros1_bridge.git ${HOME}/ros1_bridge/src && \
+# cd ${HOME}/ros1_bridge && \
+# source /opt/ros/noetic/setup.basrh && \
+# source /opt/ros/galactic/setup.bash && \
+# colcon build --symlink-install --packages-select ros1_bridge --cmake-force-configure && \
+# source install/setup.bash
+
+ENV ROS_MASTER_URI http://localhost:11311
+
+USER developer
+
+# CMD ros2 run ros1_bridge dynemic_bridge
