--- a/ros-melodic/Dockerfile.ros.gui
+++ b/ros-melodic/Dockerfile.ros.gui
@@ -31,7 +31,7 @@ RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main"
 curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add - && \
 apt update
 
-# ROSパッケージのインストール
+# install ros_package
 RUN export ROS_DISTRO=melodic && \
     apt install -y ros-melodic-desktop-full
 
@@ -39,9 +39,11 @@ RUN apt install -y python-rosdep python-rosinstall python-rosinstall-generator p
 
 RUN rosdep init && rosdep update
 
-USER developer
 ENV USERNAME developer
 ENV HOME /home/developer
+WORKDIR /home/developer
 
-
-RUN echo "source /opt/ros/melodic/setup.bash" >> ~/.bashrc
+COPY setup.bash /etc
+RUN echo "source /etc/setup.bash" >> /etc/bash.bashrc
+USER developer
+ENTRYPOINT ["/bin/bash"]
