--- a/ros2-galactic/Dockerfile.ros2.gui
+++ b/ros2-galactic/Dockerfile.ros2.gui
@@ -43,7 +43,7 @@ RUN export ROS_DISTRO=galactic && \
 
 RUN apt install -y python3-rosdep python3-colcon-common-extensions ros-galactic-gazebo-ros-pkgs
 
-RUN apt install ros-${ROS_DISTRO}-gazebo-ros*
+RUN apt install -y ros-${ROS_DISTRO}-gazebo-ros*
 
 RUN rosdep init && rosdep update
 
